Clean MCP hidden compatibility and E2E repair paths (#38873)
* Clean MCP hidden compatibility and E2E repair paths

Remove unreleased MCP legacy aliases, duplicate model-facing inputs, schema-blocked leniency branches, and unused helper code. Align MCP completion usage with the canonical ref/argument shape and make LLM E2E fail invalid model-origin actions instead of repairing them into successful calls.

* Clean MCP hidden compatibility and E2E repair paths

Remove unreleased MCP legacy aliases, duplicate model-facing inputs, schema-blocked leniency branches, and unused helper code. Align MCP completion usage with the canonical ref/argument shape and make LLM E2E fail invalid model-origin actions instead of repairing them into successful calls.

* Clean MCP hidden compatibility and E2E repair paths

Remove unreleased MCP legacy aliases, duplicate model-facing inputs, schema-blocked leniency branches, and unused helper code. Align MCP completion usage with the canonical ref/argument shape and make LLM E2E fail invalid model-origin actions instead of repairing them into successful calls.

* Clean MCP hidden compatibility and E2E repair paths

Remove unreleased MCP legacy aliases, duplicate model-facing inputs, schema-blocked leniency branches, and unused helper code. Align MCP completion usage with the canonical ref/argument shape and make LLM E2E fail invalid model-origin actions instead of repairing them into successful calls.

* Clean MCP hidden compatibility and E2E repair paths

Remove unreleased MCP legacy aliases, duplicate model-facing inputs, schema-blocked leniency branches, and unused helper code. Align MCP completion usage with the canonical ref/argument shape and make LLM E2E fail invalid model-origin actions instead of repairing them into successful calls.

* Clean MCP hidden compatibility and E2E repair paths

Remove unreleased MCP legacy aliases, duplicate model-facing inputs, schema-blocked leniency branches, and unused helper code. Align MCP complet